Fix header spacing

--- a/src/components/beregning-og-simulering/header/BeregningOgSimuleringHeader.module.css
+++ b/src/components/beregning-og-simulering/header/BeregningOgSimuleringHeader.module.css
@@ -1,3 +1,7 @@
+.header {
+    margin-bottom: 0.5rem;
+}
+
 .etterbetalingBeløp {
     border: 2px solid var(--a-green-500);
 }
